# robotiq_alternate

./: README.md
robotiq/: package.xml
robotiq_2f_140_moveit_config/: .setup_assistant  CMakeLists.txt  package.xml
robotiq_2f_140_moveit_config/config/: controllers.yaml  fake_controllers.yaml  joint_limits.yaml  ompl_planning.yaml  robotiq_2f_140.srdf  ros_controllers.yaml
robotiq_2f_140_moveit_config/launch/: chomp_planning_pipeline.launch.xml  default_warehouse_db.launch  demo.launch  demo_gazebo.launch  fake_moveit_controller_manager.launch.xml  gazebo.launch  move_group.launch  moveit.rviz  moveit_rviz.launch  ompl_planning_pipeline.launch.xml  planning_context.launch  planning_pipeline.launch.xml  robotiq_2f_140_moveit_controller_manager.launch.xml  robotiq_2f_140_moveit_planning_execution.launch  ros_controllers.launch  run_benchmark_ompl.launch  sensor_manager.launch.xml  setup_assistant.launch  trajectory_execution.launch.xml  warehouse.launch
robotiq_2f_85_moveit_config/: .setup_assistant  CMakeLists.txt  package.xml
robotiq_2f_85_moveit_config/config/: joint_limits.yaml  robotiq_2f_85_gripper.srdf
robotiq_2f_85_moveit_config/launch/: default_warehouse_db.launch  demo.launch  fake_moveit_controller_manager.launch.xml  move_group.launch  moveit.rviz  moveit_rviz.launch  ompl_planning_pipeline.launch.xml  planning_context.launch  planning_pipeline.launch.xml  robotiq_2f_85_moveit_controller_manager.launch.xml  robotiq_2f_85_moveit_planning_execution.launch  run_benchmark_ompl.launch  sensor_manager.launch.xml  setup_assistant.launch  trajectory_execution.launch.xml  warehouse.launch
robotiq_2f_bringup/: CMakeLists.txt  package.xml
robotiq_2f_bringup/launch/: robotiq_2f_140.launch  robotiq_2f_85.launch
robotiq_2f_bringup/rviz/: robotiq_2f_140.rviz
robotiq_2f_driver/: CMakeLists.txt  package.xml  setup.py
robotiq_2f_gripper_action_server/doc/: quasi_linear.ods  quasi_linear.xlsx
robotiq_2f_gripper_action_server/launch/: robotiq_2f_gripper_action_server.launch
robotiq_2f_gripper_action_server/src/: robotiq_2f_gripper_action_server.cpp  robotiq_2f_gripper_action_server_client_test.cpp  robotiq_2f_gripper_action_server_node.cpp
robotiq_2f_gripper_control/: CMakeLists.txt  package.xml
robotiq_2f_gripper_control/launch/: robotiq_2f_gripper_ethercat.launch  robotiq_2f_gripper_serial.launch  robotiq_2f_gripper_simulation.launch
robotiq_2f_gripper_control/nodes/: Robotiq2FGripperSimpleController.py
robotiq_2f_hardware/src/: robotiq_2f_hw.cpp
robotiq_2f_model/model/: robotiq_2f_85.urdf.xacro
robotiq_2f_moveit_config/: .setup_assistant  CMakeLists.txt  package.xml
robotiq_2f_moveit_config/config/: controllers.yaml  example.srdf  fake_controllers.yaml  joint_limits.yaml  ompl_planning.yaml  ros_controllers.yaml
robotiq_2f_moveit_config/launch/: chomp_planning_pipeline.launch.xml  default_warehouse_db.launch  demo.launch  demo_gazebo.launch  example_moveit_controller_manager.launch.xml  example_moveit_planning_execution.launch  fake_moveit_controller_manager.launch.xml  gazebo.launch  move_group.launch  moveit_rviz.launch  ompl_planning_pipeline.launch.xml  planning_context.launch  planning_pipeline.launch.xml  ros_controllers.launch  run_benchmark_ompl.launch  sensor_manager.launch.xml  setup_assistant.launch  trajectory_execution.launch.xml  warehouse.launch
robotiq_2f_msgs/: package.xml
robotiq_2f_robot/launch/: bringup.launch  config.rviz  load_urdf.launch  start.launch  test.launch
robotiq_description/: CMakeLists.txt  package.xml
robotiq_description/config/: robotiq_2f_140.rviz  robotiq_2f_85.rviz  robotiq_c062_a159.rviz  robotiq_ft_300.rviz  robotiq_grp_cpl_062.rviz
robotiq_description/launch/: load_robotiq_2f_140.launch  rviz_robotiq_2f_140.launch  rviz_robotiq_2f_85.launch  rviz_robotiq_c062_a159.launch  rviz_robotiq_ft_300.launch  rviz_robotiq_grp_cpl_062.launch
robotiq_ft_sensor/: CMakeLists.txt
robotiq_ft_sensor/nodes/: rq_reset_sensor.cpp
robotiq_ft_sensor/src/: rq_sensor_com.cpp
robotiq_moveit_planner/: CMakeLists.txt  package.xml
robotiq_moveit_planner/launch/: robotiq_2f_140_grasp_planner.launch
robotiq_moveit_planner/src/: gripper_test.cpp
(+48 files in other folders)
